BUGFIX: Plug  | UPnP fix for picking up changed network interfaces [Parg]
BUGFIX: UI    | Fixed 100% CPU problem with download bars [Parg]
BUGFIX: UI    | Fixed UI foregrounding itself on every unverified localhost:6880 socket connection attempt [Nolar]
BUGFIX: Core  | Fixed too many socket selectors created when in safe selector mode [Nolar]




2005.06.27 | Azureus 2.3.0.4

FEATURE: Core | DHT torrent lookup now based on sha1(hash) and torrent xfer encrypted using hash-derived key [Parg]
FEATURE: Core | More aggressive banning of peers sending bad data - algorithm change and block-banning feature [Gudy,Parg]
FEATURE: Core | Support for multiple DHT networks on same port [Parg]
FEATURE: Core | Introduced "passive torrents" - these are tracked but not downloaded [Parg]
FEATURE: Core | Category setting functions added to "My Tracker" [Parg]
FEATURE: Core | Added ability to make plugin config ui components invisible [Parg]
FEATURE: UI   | Average peer speed for swarm column added [Nolar]
FEATURE: Plug | Plugin interface extension to allow per-plugin torrent-attributes [Parg]
FEATURE: Plug | Plugin ResourceDownload feature for accessing content-type [Parg]

CHANGE: Core  | Improved optimistic unchoke anti-leech algorithms [Nolar]
CHANGE: Core  | CVS versions run multiple DHTs to permit validations of changes [Parg]
CHANGE: Core  | DHT anti-spoof for cache forwards [Parg]
CHANGE: Core  | DHT mechanisms for flood prevention [Parg]
CHANGE: Core  | Added local tracker url to torrents when hosting external torrents [Parg]
CHANGE: Core  | Hosted torrents now become "passively tracked" when their corresponding download is removed [Parg]
CHANGE: Core  | More pro-active injection of DHT scrapes for torrents with failing trackers [Parg]
CHANGE: Plug  | More JPC plugin enhancements to help reduce cache server load [Nolar]

BUGFIX: Core  | DHT protocol version logic fixes [Parg]